# ChangeLog for net-p2p/freenet
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_p1154.ebuild:
  Simplify

  20 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1153.ebuild, +freenet-0.7_p1154.ebuild, freenet-9999.ebuild:
  New upstream release + update live ebuild

  02 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1152.ebuild, +freenet-0.7_p1153.ebuild:
  New upstream release

  01 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_p1152.ebuild, freenet-9999.ebuild:
  Add another source

  11 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1151.ebuild, +freenet-0.7_p1152.ebuild:
  New upstream release

  24 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_p1150.ebuild, +freenet-0.7_p1151.ebuild, freenet-9999.ebuild:
  New upstream release + update live ebuild

  16 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_pre1149.ebuild, +freenet-0.7_pre1150.ebuild,
  freenet-9999.ebuild:
  New upstream release + update live ebuild

  07 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_pre1148.ebuild, +freenet-0.7_pre1149.ebuild,
  freenet-9999.ebuild:
  New upstream release + update live ebuild

  07 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  freenet-0.7_pre1148.ebuild:
  Try the latest jdk first

  07 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_pre1146.ebuild, +freenet-0.7_pre1148.ebuild,
  +files/freenet.old:
  New upstream release

  06 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_pre1145.ebuild, +freenet-0.7_pre1146.ebuild,
  freenet-9999.ebuild:
  New upstream release + update live ebuild

  04 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +freenet-0.7_pre1145.ebuild, -freenet-0.7_rc2_p1144.ebuild,
  freenet-9999.ebuild: