@@ -6,6 +6,6 @@ DIST freenet-0.7_p1154.tar.bz2 2058160 RMD160 4c529cc366c463ccfbf3d902c939bbcaac
 DIST seednodes-20080721.fref 37077 RMD160 4b7aca1d3864a42f4bbece5cf7d9b410888feebe SHA1 93fa0bbae17e15cbf073ad9da9070de023c265f5 SHA256 37f075bc40611f0db15e3e5012aebbd6a14775f2a70e90ab7838b5f91fa42ac1
 DIST wrapper-20080330.conf 1667 RMD160 77c0e4d379521ce10da408dd35ec0ebb5c82f4a9 SHA1 7f8679579c47e2c0644d26c67c26d779bf6f8d75 SHA256 70a98acb43b43b00b45bda40de5745ba188d366dd69c5d97968aa4494b7441f0
 EBUILD freenet-0.7_p1154.ebuild 2795 RMD160 ec696596bd45560a55e755c8b5c139d89fae0262 SHA1 1296a1398c649a68a8cd5924f9d2f29c4ad1b348 SHA256 182ced762454eccf63ef8dae68d28b2f366aff26b678454b0067e325763da9ef
-EBUILD freenet-9999.ebuild 3637 RMD160 c0be718bde123ecb0d3bb3184f48942a71352f95 SHA1 1badd482e6c3adbe75a1acbf3b7391f78f5caf95 SHA256 e7a9e22a2db6bfc9a92cb3fd46b8fad8c7561932c9c4fdc7f2cd72b255a38487
-MISC ChangeLog 10869 RMD160 aa2e666569a94fe7dbcc740e19b0d83625ef1495 SHA1 269413d59b71c627be2c9a8b6a9e898df0986699 SHA256 a588519e77d1fad5607672ec6cfc64ddfe5d83ad743614da449746bd74469eb2
+EBUILD freenet-9999.ebuild 3273 RMD160 0491852bd1c3542f03c6604a49dfa0fe40650e18 SHA1 07cc56189062d53011e1b7917eda9331100f820b SHA256 d142f9b61407df8cfb2e52f563bd953bca07c103646b6b240a5c049013bbd44d
+MISC ChangeLog 10963 RMD160 c9a6925269d2bc383fd7a58b27d8d58a8d5874e1 SHA1 6a8de5991c46d876a15120314ad8802334e31e01 SHA256 34c471c44605b9793ec8475ba94c298649601ab11461101b92b60957d1d1a0b0
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
