@@ -3,6 +3,10 @@
 # $Header: $
 
   22 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  freenet-9999.ebuild:
+  Simplify
+
+  22 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   freenet-0.7_p1154.ebuild:
   Simplify
 
